force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_AddressLineOne__c.field-meta.xml
<CustomField>
    <fullName>d4c_AddressLineOne__c</fullName>
    <label>Address Line One</label>
    <length>255</length>
    <type>Text</type>
</CustomField>