force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_AddressType__c.field-meta.xml
<CustomField>
    <fullName>d4c_AddressType__c</fullName>
    <label>Address Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>