force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_CountryCode__c</fullName>
    <label>Country Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>