force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>