force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_Producer__c.field-meta.xml
<CustomField>
    <fullName>d4c_Producer__c</fullName>
    <label>Producer</label>
    <referenceTo>d4c_Producer__c</referenceTo>
    <relationshipName>Producer_Addresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>