force-app/main/default/objects/d4c_ProducerAddress__c/fields/d4c_State__c.field-meta.xml
<CustomField>
    <fullName>d4c_State__c</fullName>
    <label>State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>